# getpostcraft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.claude/agents/: llm-security-auditor.md  prompt-guardrail-auditor.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  roadmap-v0.4.md
docs/adr/: ADR-009-encrypted-secrets.md  README.md
docs/architecture/: OAUTH_FLOW.md  PUBLISHING_FLOW.md
docs/examples/: product-truth-terminallearning.md
docs/guides/: PRODUCT_TRUTH.md  SAAS_MIGRATION.md  recovery.md
docs/security-audits/: 2026-05-12-llm-security-audit.md  2026-05-12-prompt-guardrail-audit.md
docs/setup/: GETPOSTCRAFT_SETUP.md  LINKEDIN_APP_SETUP.md  META_APP_SETUP.md
scripts/: check-versions.mjs  check-versions.test.mjs  free-port.mjs  generate-update-manifest.mjs  generate-update-manifest.test.mjs
sidecar/: ai_client.py  main.py  render.py  requirements.txt  scraper.py
sidecar/tests/: test_ai_client.py
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_keys.rs  lib.rs  log_redact.rs  main.rs  network_rules.rs  oauth_success.html  openrouter_pricing.rs  scheduler.rs  security_admin.rs  sidecar.rs  state.rs  token_store.rs
src-tauri/src/adapters/: instagram.rs  linkedin.rs  mod.rs
src-tauri/src/commands/: ai.rs  auto_backup.rs  calendar.rs  data_export.rs  logs.rs  media.rs  mod.rs  oauth.rs  publisher.rs  python_deps.rs  security_admin.rs  settings.rs
src-tauri/src/db/: accounts.rs  ai_usage.rs  groups.rs  history.rs  mod.rs  scheduler.rs  settings_db.rs
src-tauri/src/db/migrations/: 001_init.sql  002_scheduled_at.sql  003_accounts.sql  004_image_path.sql  005_reset_dead_models.sql  006_update_default_model.sql  007_product_truth.sql  008_reset_dead_deepseek.sql  009_account_branding.sql  010_fix_openrouter_model_ids.sql  011_post_images_array.sql  012_account_visual_profile.sql  013_post_account_id.sql  014_token_expiry.sql  015_ai_usage.sql  016_account_display_handle.sql  017_published_url.sql  018_post_groups.sql  019_scheduler_retry_columns.sql  020_security_admin.sql
src/components/: RestorePromptDialog.tsx
src/components/composer/: BriefForm.test.tsx  BriefForm.tsx  ContentPreview.tsx  CostEstimateBanner.tsx  GroupResultPanel.tsx
src/components/settings/: AboutSection.tsx  AccountsForm.test.tsx  AccountsForm.tsx  AiKeyForm.tsx  AiUsagePanel.tsx  BackupSection.tsx  BrandColorsEditor.tsx  DisplayHandleEditor.tsx  ImgbbSection.tsx  InstagramSection.tsx  LinkedInSection.tsx  LogsPanel.tsx  ProductTruthEditor.tsx  PublicationForm.test.tsx  PublicationForm.tsx  SecurityCenter.tsx  TokenExpiryBadge.test.tsx  TokenExpiryBadge.tsx  UpdateChecker.tsx
src/components/shared/: CaptionWithFold.tsx  DevModeBanner.tsx  GroupBadge.tsx  HelpSheet.tsx  NetworkBadge.tsx  PostActions.tsx  PostThumbnail.tsx
src/lib/tauri/: calendar.ts  composer.ts  dataExport.ts  invoke.ts  media.ts  oauth.ts  publisher.ts  securityAdmin.ts  settings.ts  updater.ts
src/routes/: __root.tsx  index.test.tsx  index.tsx
src/routes/calendar/: calendar.timezone.test.ts  index.tsx
src/routes/composer/: index.tsx
src/routes/guide/: index.tsx
src/routes/settings/: index.tsx
src/stores/: composer.store.ts
src/test/: renderWithQuery.tsx  setup.ts
src/types/: composer.types.ts  settings.types.ts
