[package]
name = "getpostcraft"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "getpostcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "io-util", "time", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = "8.5.1"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
# Direct dep so the SSRF guard in `commands/ai.rs::validate_external_url`
# doesn't depend on a transitive promise from reqwest.
url = "2"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
log = "0.4"
# Used by `log_redact` to scrub secret-bearing fields from upstream
# response bodies before they reach the logger. Already a transitive
# dep via sqlx — declaring it explicitly costs nothing.
regex = "1"
# OS-native secret storage — Windows Credential Manager (DPAPI-backed),
# macOS Keychain, Linux Secret Service (gnome-keyring / KWallet).
# Replaces the previous plain-text api_keys.json. ADR-009 documents the choice.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
# HTTP mock server for testing publish_post / publish_linkedin_post without
# touching the real Meta or LinkedIn endpoints. Returns a localhost URL we
# point the production code at via the GETPOSTCRAFT_*_API env vars.
wiremock = "0.6"
# `serial_test` serialises tests that mutate the same process-wide env var.
# Without it, two parallel tests setting GETPOSTCRAFT_IG_API would race.
serial_test = "3"

